Add dataset filtration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ packages = [{include = "my_dataset"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-bs4 = "^0.0.2"
-BeautifulSoup = "^3.2.2"
+beautifulsoup4 = "^4.12.3"
 
 
 [build-system]
