--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "my_dataset"}]
 python = "^3.9"
 beautifulsoup4 = "^4.12.3"
 tqdm = "^4.66.2"
+numpy = "^1.26.4"
+tldextract = "^5.1.1"
 
 
 [build-system]
